@@ -1,3 +1,6 @@
+2314.	[bug]		Uninitialized memory use on error path in
+			bin/named/lwdnoop.c.  [RT #17476]
+
 2313.	[cleanup]	Silence Coverity warnings. Handle private stacks.
 			[RT #17447] [RT #17478]
 
